--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: auto 250px 600px auto;
+  grid-template-columns: auto 400px 600px auto;
   grid-template-rows: 15% 600px auto;
   grid-template-areas:
     ". header header ."
@@ -15,7 +15,7 @@ body {
   column-gap: 10px;
   row-gap: 10px;
   justify-items: center;
-  font-family: "Roboto", sans-serif;
+  font-family: "Reenie Beanie", cursive;
 }
 
 .header {
@@ -55,7 +55,52 @@ body {
   width: 100%;
   height: 100%;
   background: var(--cell-background-color);
-  /* opacity: var(--cell-opacity); */
+}
+
+ul,
+li {
+  list-style: none;
+}
+ul {
+  overflow: hidden;
+  padding: 0;
+}
+ul li a {
+  text-decoration: none;
+  color: #000;
+  background: #ffc;
+  display: block;
+  height: 2em;
+  width: 8em;
+  padding: 1em;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  transform: rotate(-6deg);
+}
+ul li {
+  margin: 1em;
+  float: left;
+  font-size: 120%;
+  direction: rtl;
+}
+
+ul li:nth-child(even) a {
+  transform: rotate(4deg);
+  position: relative;
+  top: 5px;
+}
+ul li:nth-child(3n) a {
+  transform: rotate(-3deg);
+  position: relative;
+  top: -5px;
+}
+
+ul li a:hover,
+ul li a:focus {
+  box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.7);
+  transform: scale(1.25);
+  position: relative;
+  z-index: 5;
 }
 
 .custom-shape-divider-bottom-1602788252 {
