--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: auto 400px 600px auto;
+  grid-template-columns: auto 360px 40px 600px auto;
   grid-template-rows: 15% 600px auto;
   grid-template-areas:
-    ". header header ."
-    ". main squares ."
-    ". main paper-type ."
-    ". footer footer .";
+    ". header header header ."
+    ". main . squares ."
+    ". colorWells colorWells colorWells ."
+    ". footer footer footer .";
   column-gap: 10px;
   row-gap: 10px;
   justify-items: center;
@@ -41,9 +41,11 @@ body {
   background-color: white;
 }
 
-.paper-type {
-  grid-area: paper-type;
+.colorWells {
+  grid-area: colorWells;
   font-size: 1.25em;
+  height: 150px;
+  width: 100%;
 }
 
 .footer {
@@ -57,16 +59,71 @@ body {
   background: var(--cell-background-color);
 }
 
+div.start {
+  margin: 15px auto 0 auto;
+  width: 100%;
+  text-align: center;
+}
+
+.start-button {
+  color: #494949 !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  background: #e6e6e6;
+  padding: 20px;
+  border: 4px solid #494949 !important;
+  display: inline-block;
+  transition: all 0.15s ease 0s;
+}
+
+.start-button:hover {
+  color: #ffffff !important;
+  background: #f6b93b;
+  border-color: #f6b93b !important;
+  cursor: pointer;
+  /* transition: all 0.4s ease 0s; */
+  transition: transform 0.15s linear;
+  transform: scale(1.15);
+  position: relative;
+  z-index: 5;
+}
+
+/* Post-It Note Effect found at https://code.tutsplus.com/tutorials/create-a-sticky-note-effect-in-5-easy-steps-with-css3-and-html5--net-13934 */
 ul,
 li {
   list-style: none;
 }
+
 ul {
   overflow: hidden;
+  width: 100%;
   padding: 0;
 }
-ul li a {
+
+ul.setup {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 90%;
+}
+
+ul.colorWells {
+  display: flex;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+a.setup {
+  margin: 1em;
+  font-size: 125%;
+  /* direction: rtl; */
   text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  /* vertical-align: middle; */
   color: #000;
   background: #ffc;
   display: block;
@@ -76,12 +133,24 @@ ul li a {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
   transform: rotate(-6deg);
+  transition: transform 0.15s linear;
 }
-ul li {
+
+a.colorWells {
   margin: 1em;
-  float: left;
-  font-size: 120%;
-  direction: rtl;
+  font-size: 100%;
+  text-decoration: none;
+  color: #000;
+  background: #ccf;
+  display: block;
+  height: 1.3em;
+  width: 8em;
+  padding: 1em;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  transform: rotate(-6deg);
+  transition: transform 0.15s linear;
+  text-align: center;
 }
 
 ul li:nth-child(even) a {
@@ -103,6 +172,7 @@ ul li a:focus {
   z-index: 5;
 }
 
+/* Shape Divider */
 .custom-shape-divider-bottom-1602788252 {
   position: absolute;
   bottom: 0;
